EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
== 09/18/2014==
demonstar55: Implement tell queues
	Currently set to a limit of 20 by default (World:TellQueueSize) I was unable to hit the limit on live though (100+)
	The required SQL nukes the old tell queue table, which may or may not be in your DB
	Optional SQL adds the rule to the DB to allow easy of change
	Note: this does not play well with multiple sessions with the same name on (crash and relog and have multiple sessions) but normal tells don't play well either

== 09/16/2014 ==
demonstar55: Implement spell formula 137 (BER AA Desperation)
Uleat (NateDog): Fix for LoadBuffs() crash when a spell with a non-persistent Illusion effect was loaded.
demonstar55: Fix some effect calcs + implement more (derived from the client)

== 09/15/2014 ==
Kayen: Nimbus effects will now be reapplied after zoning and will be removed when associated buff fades.

== 09/13/2014 ==
demonstar55: Fix rogues not having Thieves' Cant

== 09/09/2014 ==
demonstar55: Incrase Mob kick/bash timer by 3
	see: http://www.eqemulator.org/forums/showthread.php?t=38734
demonstar55: Fix slow effect on NPC special attack reuse timers
	see: http://www.eqemulator.org/forums/showthread.php?t=38734
demonstar55: Slow fixes to bots!
demonstar55: Revamped how NPC attack rate is set
	SQL: 2014_09_09_attack_delay.sql
demonstar55: Added attackdelay to #npcedit

== 09/08/2014 ==
demonstar55: Fix slow calc
	see: http://www.eqemulator.org/forums/showthread.php?t=38734

== 09/07/2014 ==
Akkadius: Fixed ROF Augment item dupe with not checking for available slots properly and adding items to the virtual instance

== 09/06/2014 ==
Uleat: Tweaked 'Smart' trading code to return main slots before sub slots in stackable and free space search processes. (If enough people ask for it, I'll add an optional rule to allow 'bag packing' - the original implementation behavior)

== 09/05/2014 ==